#5097: Maywood: Fix image alignment

--- a/maywood/style.css
+++ b/maywood/style.css
@@ -1700,10 +1700,6 @@ h6, .h6 {
 	line-height: 1.125;
 }
 
-.wp-block-image {
-	text-align: center;
-}
-
 .wp-block-image figcaption {
 	color: #686868;
 	font-size: 0.69444rem;
